--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
       </ul>
     </div>
   </div>
-  <div class="row">
+  <div class="row overflow-hidden">
     <div class="col-xs-12">
       <router-outlet></router-outlet>
     </div>
