--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -20,6 +20,7 @@
   <div class="col-xs-12" style="overflow: hidden">
     <app-new-project
       *ngIf="createNew"
+      @slideState
       (projectCreated)="onProjectCreated($event)"
       (creationCancelled)="createNew = false"></app-new-project>
   </div>
@@ -37,8 +38,8 @@
     <app-project
       *ngFor="let prj of projects; let i = index"
       [project]="prj"
-      [@markedTrigger]="markedPrjIndex === i ? 'marked' : 'default'"
-      @itemTrigger
+      [@markedState]="markedPrjIndex === i ? 'marked' : 'default'"
+      [@itemState]="createNew ? 'slidDown' : 'slidUp'"
       [ngClass]="{ inactive: prj.status === 'inactive' }"
       (statusUpdated)="onStatusUpdated($event, i)"
       (projectDeleted)="onProjectDeleted(i)"
