--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,8 +8,8 @@
     </div>
   </div>
   <div class="row overflow-hidden">
-    <div class="col-xs-12">
-      <router-outlet></router-outlet>
+    <div class="col-xs-12" [@routeState]="getAnimationsData(mainOutlet)">
+      <router-outlet #mainOutlet="outlet"></router-outlet>
     </div>
   </div>
 </div>
