--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -35,7 +35,8 @@
         class="loading-bar-element"
         *ngIf="progress != 'finished'"></div>
     </div>
-    <app-project
+    <div [@listState]="projects?.length">
+      <app-project
       *ngFor="let prj of projects; let i = index"
       [project]="prj"
       [@markedState]="markedPrjIndex === i ? 'marked' : 'default'"
@@ -44,5 +45,6 @@
       (statusUpdated)="onStatusUpdated($event, i)"
       (projectDeleted)="onProjectDeleted(i)"
       (click)="markedPrjIndex = i"></app-project>
+    </div>
   </div>
 </div>
